--- a/chart/templates/otel-instrumentation-java.yaml
+++ b/chart/templates/otel-instrumentation-java.yaml
@@ -66,7 +66,7 @@ spec:
     - name: OTEL_LOGS_EXPORTER
       value: otlp
     - name: OTEL_EXPORTER_OTLP_ENDPOINT
-      value: http://localhost:4317
+      value: localhost:4317
     - name: OTEL_EXPORTER_OTLP_TIMEOUT
       value: "20"
     - name: SPLUNK_TRACE_RESPONSE_HEADER_ENABLED
