--- a/chart/templates/otel-instrumentation-java.yaml
+++ b/chart/templates/otel-instrumentation-java.yaml
@@ -66,7 +66,7 @@ spec:
     - name: OTEL_LOGS_EXPORTER
       value: otlp
     - name: OTEL_EXPORTER_OTLP_ENDPOINT
-      value: localhost:4317
+      value: http://localhost:4318
     - name: OTEL_EXPORTER_OTLP_TIMEOUT
       value: "20"
     - name: SPLUNK_TRACE_RESPONSE_HEADER_ENABLED
@@ -77,9 +77,9 @@ spec:
   propagators:
     - tracecontext
     - baggage
-  sampler:
-    type: parentbased_traceidratio
-    argument: "0.25"
+  # sampler:
+  #   type: parentbased_traceidratio
+  #   argument: "0.25"
   java:
     env:
       - name: OTEL_JAVAAGENT_DEBUG
