fix: url change

--- a/chart/templates/otel-instrumentation-java.yaml
+++ b/chart/templates/otel-instrumentation-java.yaml
@@ -12,13 +12,13 @@ spec:
     - name: OTEL_LOGS_EXPORTER
       value: otlp
     - name: OTEL_EXPORTER_OTLP_ENDPOINT
-      value: humio-agent-apphumio-collector:4317
+      value: http://humio-agent-apphumio-collector:4318
     - name: OTEL_EXPORTER_OTLP_TIMEOUT
       value: "20"
     - name: SPLUNK_TRACE_RESPONSE_HEADER_ENABLED
       value: "true"
   exporter:
-    endpoint: humio-agent-apphumio-collector:4317
+    endpoint: http://humio-agent-apphumio-collector:4318
 
   propagators:
     - tracecontext
