--- a/chart/templates/otel-instrumentation-java.yaml
+++ b/chart/templates/otel-instrumentation-java.yaml
@@ -11,10 +11,10 @@ spec:
       value: otlp
     - name: OTEL_LOGS_EXPORTER
       value: otlp
-    - name: OTEL_EXPORTER_OTLP_ENDPOINT
-      value: http://humio-agent-apphumio-collector-headless:4317
-    - name: OTEL_EXPORTER_OTLP_TIMEOUT
-      value: "20"
+    # - name: OTEL_EXPORTER_OTLP_ENDPOINT
+    #   value: http://humio-agent-apphumio-collector-headless:4317
+    # - name: OTEL_EXPORTER_OTLP_TIMEOUT
+    #   value: "20"
     - name: SPLUNK_TRACE_RESPONSE_HEADER_ENABLED
       value: "true"
   exporter:
