--- a/chart/templates/otel-instrumentation-java.yaml
+++ b/chart/templates/otel-instrumentation-java.yaml
@@ -18,7 +18,7 @@ spec:
     - name: SPLUNK_TRACE_RESPONSE_HEADER_ENABLED
       value: "true"
   exporter:
-    endpoint: humio-agent-apphumio-collector-headless:4317
+    endpoint: http://humio-agent-apphumio-collector-headless:4317
 
   propagators:
     - tracecontext
